--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-redux": "^7.2.6",
+    "react-scripts": "^4.0.1",
+    "reduxsauce": "^1.2.1",
+    "seamless-immutable": "^7.1.4",
+    "web-vitals": "^2.1.3",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
